--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,14 +1,13 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     background: white;
 }
 
-
-.content{
+.content {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -16,22 +15,21 @@ body{
     text-align: center;
     padding: 60px 32px;
     width: 370px;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     background: rgba(48, 224, 255, 0.185);
     /* box-shadow: -1px 4px 28px 0px rgba(0,0,0,0.75); */
 }
 
-.content header{
+.content header {
     color: rgb(0, 238, 255);
     font-size: 33px;
     font-weight: bold;
     margin: 0 0 35px 0;
-    font-family: 'Montserrat',sans-serif;
+    font-family: "Montserrat", sans-serif;
     text-align: left;
 }
 
-
-.field{
+.field {
     position: relative;
     height: 45px;
     width: 100%;
@@ -39,13 +37,13 @@ body{
     background: rgba(16, 196, 241, 0.164);
 }
 
-.field span{
+.field span {
     color: #2691d9ad;
     width: 40px;
     line-height: 45px;
 }
 
-.field input{
+.field input {
     height: 100%;
     width: 100%;
     background: transparent;
@@ -56,50 +54,50 @@ body{
     /* font-family: 'Poppins',sans-serif; */
 }
 
-.space{
+.space {
     margin-top: 16px;
 }
 
-.space span i.hide-btn::before{
+.space span i.hide-btn::before {
     content: "\f070";
 }
 
-.show{
+.show {
     position: absolute;
     right: 13px;
     font-size: 13px;
     cursor: pointer;
 }
 
-.pass{
+.pass {
     text-align: right;
     margin: 10px 0;
 }
 
-.pass a{
+.pass a {
     color: #2691d9ad;
     text-decoration: none;
-    font-family: 'Poppins',sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
-.pass:hover a{
+.pass:hover a {
     text-decoration: underline;
 }
 
-.checkbox{
+.checkbox {
     float: left;
     text-decoration: none;
     margin-top: -26px;
 }
 
-.checkbox label{
+.checkbox label {
     cursor: pointer;
     text-decoration: none;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     color: #2691d9ad;
 }
 
-.failed button{
+.failed button {
     margin: 0px 0px 10px 0px;
     height: 45px;
     width: 363px;
@@ -113,84 +111,113 @@ body{
     border: 0px solid rgba(16, 196, 241, 0.164);
 }
 
-.failed button:hover{
+.failed button:hover {
     background: #48e1ec;
 }
 
-.login{
+.login {
     color: #2691d9ad;
     margin: 20px 0;
-    font-family: 'Poppins',sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
-
-.links{
+.links {
     display: flex;
     cursor: pointer;
     color: #2691d9ad;
     margin: 0 0 20px 0;
 }
 
-.facebook,.google{
+.facebook,
+.google {
     width: 100%;
     height: 45px;
     line-height: 45px;
     margin-left: 10px;
 }
 
-.facebook{
+.facebook {
     margin-left: 5px;
     background: rgba(16, 196, 241, 0.164);
     /* border: 1px solid #3e61a8; */
 }
 
-.facebook a{
+.facebook a {
     color: #2691d9ad;
 }
 
-.google{
+.google {
     margin-right: 10px;
     background: rgba(16, 196, 241, 0.164);
     /* border: 1px solid #df2060; */
 }
 
-.google a{
+.google a {
     color: #2691d9ad;
 }
-.facebook:hover{
+.facebook:hover {
     background: #48e1ec;
 }
 
-.google:hover{
+.google:hover {
     background: #48e1ec;
 }
 
-.links i{
+.links i {
     font-size: 17px;
 }
 
-i span{
+i span {
     margin-left: 8px;
     font-weight: 500;
     letter-spacing: 1px;
     font-size: 16px;
-    font-family: 'Poppins',sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
-.signup{
+.signup {
     font-size: 15px;
     color: #2691d9ad;
-    font-family: 'Poppins',sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
-.signup a{
+.signup a {
     color: #3498db;
     text-decoration: none;
 }
 
-.signup a:hover{
+.signup a:hover {
     text-decoration: underline;
 }
 
+form {
+    margin-top: 20px;
+}
+.message {
+    color: #842029;
+    font-family: "Poppins", sans-serif;
+    font-size: 15px;
+    justify-content: center;
+    align-items: center;
+    font-style: italic;
+    position: relative;
+    height: 45px;
+    width: 100%;
+    display: flex;
+    background: #f8d7da;
+    border-color: #842029;
+}
 
-
+.message-regis {
+    color: #0f5132 !important;
+    background: #d1e7dd !important;
+    font-family: "Poppins", sans-serif;
+    font-size: 15px;
+    justify-content: center;
+    align-items: center;
+    font-style: italic;
+    position: relative;
+    height: 45px;
+    width: 100%;
+    display: flex;
+}
